Вшил мод на экономику и исправил важнейшую ошибку

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "search.useGlobalIgnoreFiles": false,
     "search.useParentIgnoreFiles": false,
     "cwtools.rules_version": "manual",
-    "cwtools.rules_folder": "D:\\Разработка модов на Хойку\\cwtools-hoi4-config-master"
+    "cwtools.rules_folder": "D:\\Разработка модов на Хойку\\cwtools-hoi4-config"
 }
