Поработал над Иберией

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "hoi4ModUtilities.modFile": "c:\\Users\\User\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\Dark_Times_of_Andalus\\descriptor.mod",
+    "hoi4ModUtilities.modFile": "c:\\Users\\User\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\Dark_Times_of_Andalus_Test_Build\\descriptor.mod",
     "search.useGlobalIgnoreFiles": false,
     "search.useParentIgnoreFiles": false,
     "cwtools.rules_version": "manual",
